syntax = "proto3";

option csharp_namespace = "TeacherMicroservice.Protos";
service Teacher{
	rpc InitTeacher (TeacherRequest)  returns (TeacherResponse);
	rpc GetTeacherInfo (EmailTeacher) returns (TeacherResponse);

}


message TeacherRequest{
	string name=1;
	string last_name=2;
		string email=3;
		int32 university_id=4;

}



message	EmailTeacher	{
	string email=1;
}

message TeacherResponse{	
int32 teacher_id=1;
int32 university_id=2;
}


